MDEV-32907 Do not use gbh if encountering Item_aggregate_ref

In the MDEV-32907 case, spider encounters Item_aggregate_ref, which is
valid at gbh creation, but became invalid at gbh execution. Therefore
we ban Item_aggregate_ref for spider gbh creation. To that end, we
make sure that str is NULL if and only if in the creation stage, not
the execution stage.